--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node netlify/functions/api.js",
-    "build": "npm run build"
+    "build:frontend": "npm run build"
   },
   "keywords": [],
   "author": "",
