--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "start": "node netlify/functions/api.js",
-    "build:frontend": "cd frontend && npm install && npm run build"
+    "start": "node netlify/functions/api.js"
   },
   "dependencies": {
     "@netlify/functions": "^3.0.1",
@@ -26,4 +25,3 @@
     ]
   }
 }
-
