--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@ publish = "frontend/"
 directory = "netlify/functions/"
 
 [redirects]
-from = "/api/recipes"
-to = "/.netlify/functions/api/recipes"
+from = "/api/*"
+to = "/.netlify/functions/api/:splat"
 status = 200
 
