--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@ directory = "netlify/functions/"
 
 [redirects]
 from = "/api/*"
-to = "/.netlify/functions/api/:splat"
+to = "/.netlify/functions/api"
 status = 200
+
 
