--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "recipe-app",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "start": "node netlify/functions/api.js"
@@ -10,7 +11,6 @@
     "@netlify/functions": "^3.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "node-fetch": "^2.6.7",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
