--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,11 @@
-[build]
-publish = "frontend/"
-
 [functions]
-directory = "netlify/functions/"
+directory = "netlify/functions"
+node_bundler = "esbuild"
 
-[redirects]
+[[redirects]]
+force = true
 from = "/api/*"
-to = "/.netlify/functions/api"
 status = 200
+to = "/.netlify/functions/api/:splat"
 
 
